Bug#34235 - Random failure of wait_condition.inc             with information_schema.processlist

Changed synchronization point calls.
Adapted backup test cases and re-enabled them.
Removed all unused BACKUP_BREAKPOINTs. None is left.
Removed sql/backup/debug.h as it is now obsolete.
Removed inclusion of debug.h from many files.
Cleaned mysql-test/t/disabled.def.

Fixed some random failures of wait_condition.inc with
information_schema.processlist.

Small fixes of the Debug Sync Facility:
Added extern "C" to improve linkability on some platforms.
Fixed compiler warnings.
Moved locking of the mutex out of the SIGNAL and WAIT_FOR branches.
Made a more verbose proc_info.